[Style] fix the upload modal position on mobile size.

--- a/frontend/src/style/Upload.scss
+++ b/frontend/src/style/Upload.scss
@@ -30,7 +30,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 20%);
+  transform: translate(-50%, 10%);
   background: #fff8fff6;
   box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.3);
 }
@@ -50,11 +50,5 @@
 @media (max-width: 640px) {
   .modal-dialog {
     max-width: 100vw;
-  }
-  .modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: (-50%, 0) !important;
   }
 }
